# fastapi_test_server

./: .gitignore  README.md  main.py  pyproject.toml  vercel.json
fastapi_test_server/: __init__.py  __main__.py
