[tool.poetry]
name = "fastapi-test-server"
version = "0.1.0"
description = ""
authors = ["BarsTiger <kit.barsic@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_test_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
